--- a/template/base.html
+++ b/template/base.html
@@ -8,15 +8,15 @@
 	<link rel='canonical' href="{{ request.url }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='font/font.css') }}">
 	<meta charset="utf-8">
-<!--	&lt;!&ndash; Global site tag (gtag.js) - Google Analytics &ndash;&gt;-->
-<!--	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MSVN84ZY8H"></script>-->
-<!--	<script>-->
-<!--	  window.dataLayer = window.dataLayer || [];-->
-<!--	  function gtag(){dataLayer.push(arguments);}-->
-<!--	  gtag('js', new Date());-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MSVN84ZY8H"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-<!--	  gtag('config', 'G-MSVN84ZY8H');-->
-<!--	</script>-->
+	  gtag('config', 'G-MSVN84ZY8H');
+	</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
