--- a/template/base.html
+++ b/template/base.html
@@ -54,7 +54,7 @@
 		{% block body %}{% endblock %}
 		<div class="jumbotron jumbotron-fluid">
 			<div class="container">
-				<p class="lead">© 2021 Tamilkamakatha</p>
+				<p class="lead">© 2021 Tamilkamakatha Tamil sex stories</p>
 			</div>
 		</div>
 	</body>
